Update verification translation

--- a/src/main/resources/i18n/messages_ar.properties
+++ b/src/main/resources/i18n/messages_ar.properties
@@ -235,6 +235,19 @@ profile.misc-info.relationship.open=علاقة مفتوحة
 profile.misc-info.relationship.other=الوضع معقد
 profile.misc-info.kids.no=من دون أطفال
 profile.misc-info.kids.yes=يوجد أطفال
+profile.profile-picture.change.description-1=تغيير صورة الملف الشخصي؟
+profile.profile-picture.change.description-2=ستتم إزالة حالة التحقق الخاصة بك.
+profile.verification.your-verification=صورة التحقق الخاصة بك
+profile.verification.description-1=قم بتحميل صورة لنفسك تظهر فيها الأحرف التالية:
+profile.verification.description-2=فقط اكتب النص على قطعة من الورق الأبيض. تأكد من أن وجهك ظاهر بوضوح.
+profile.verification.description-3=يمكن التحقق منك من قبلنا وكذلك من قبل المجتمع.
+profile.verification.instruction-1=هل كلتا الصورتين تظهران نفس الشخص؟
+profile.verification.instruction-2=هل نص التحقق على قطعة ورق فارغة؟
+profile.verification.instruction-3=هل نصوص التأكيد متطابقة؟
+profile.verification.vote.success=تم التصويت الخاص بك
+profile.verification.button=تحقق من المستخدم
+profile.verification.badge.community=تم التحقق من قبل المجتمع
+profile.verification.badge.admin=تم التحقق من قبلنا
 
 profile.js.delete-image.confirm=حذف الصورة المحددة؟
 
