--- a/src/main/resources/i18n/messages_cz.properties
+++ b/src/main/resources/i18n/messages_cz.properties
@@ -184,6 +184,19 @@ profile.misc-info.relationship.open=Otevřený vztah
 profile.misc-info.relationship.other=Je to složité
 profile.misc-info.kids.no=Žádné děti
 profile.misc-info.kids.yes=Má děti
+profile.profile-picture.change.description-1=Změnit profilový obrázek?
+profile.profile-picture.change.description-2=Váš stav ověření bude odstraněn.
+profile.verification.your-verification=Váš ověřovací obrázek
+profile.verification.description-1=Nahrajte svůj obrázek s následujícími postavami:
+profile.verification.description-2=Stačí napsat text na bílý papír. Ujistěte se, že váš obličej je jasně viditelný.
+profile.verification.description-3=Můžete být ověřeni námi i komunitou.
+profile.verification.instruction-1=Zobrazují oba obrázky stejnou osobu?
+profile.verification.instruction-2=Je ověřovací text na prázdném listu papíru?
+profile.verification.instruction-3=Shodují se potvrzovací texty?
+profile.verification.vote.success=Váš hlas byl odevzdán
+profile.verification.button=Ověřit uživatele
+profile.verification.badge.community=Ověřeno komunitou
+profile.verification.badge.admin=Námi ověřeno
 profile.js.delete-image.confirm=Smazat vybraný obrázek?
 profile-onboarding.profile-picture=Vypadám takto
 profile-onboarding.description=Něco o sobě
