--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -177,6 +177,19 @@ profile.misc-info.relationship.open=Offene Beziehung
 profile.misc-info.relationship.other=Es ist kompliziert
 profile.misc-info.kids.no=Keine Kinder
 profile.misc-info.kids.yes=Hat Kinder
+profile.profile-picture.change.description-1=Profilbild ändern?
+profile.profile-picture.change.description-2=Dein Verifizierungsstatus wird entfernt.
+profile.verification.your-verification=Dein Verifizierungsbild
+profile.verification.description-1=Lade ein Bild von dir hoch, auf dem die folgenden Zeichen zu sehen sind:
+profile.verification.description-2=Schreibe den Text einfach auf ein weißes Blatt Papier. Stelle sicher, dass Dein Gesicht deutlich erkennbar ist.
+profile.verification.description-3=Du kannst sowohl von uns als auch von der Community verifiziert werden.
+profile.verification.instruction-1=Zeigen beide Bilder dieselbe Person?
+profile.verification.instruction-2=Befindet sich der Verifizierungstext auf einem leeren Blatt Papier?
+profile.verification.instruction-3=Stimmen die Bestätigungstexte überein?
+profile.verification.vote.success=Deine Stimme wurde abgegeben
+profile.verification.button=Benutzer verifizieren
+profile.verification.badge.community=Von der Community verifiziert
+profile.verification.badge.admin=Von uns verifiziert
 profile.js.delete-image.confirm=Ausgewähltes Bild löschen?
 profile-onboarding.profile-picture=So sehe ich aus
 profile-onboarding.description=Etwas über mich
