--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -176,6 +176,19 @@ profile.misc-info.relationship.open=Relación abierta
 profile.misc-info.relationship.other=Es complicado
 profile.misc-info.kids.no=Sin hijos
 profile.misc-info.kids.yes=Tiene hijos
+profile.profile-picture.change.description-1=¿Cambiar foto de perfil?
+profile.profile-picture.change.description-2=Su estado de verificación será eliminado.
+profile.verification.your-verification=Tu foto de verificación
+profile.verification.description-1=Sube una foto tuya mostrando los siguientes personajes:
+profile.verification.description-2=Solo escribe el texto en una hoja blanca de papel. Asegúrate de que tu cara sea claramente visible.
+profile.verification.description-3=Puede ser verificado por nosotros y por la comunidad.
+profile.verification.instruction-1=¿Ambas imágenes muestran a la misma persona?
+profile.verification.instruction-2=¿Está el texto de verificación en una hoja de papel en blanco?
+profile.verification.instruction-3=¿Coinciden los textos de confirmación?
+profile.verification.vote.success=Tu voto ha sido emitido
+profile.verification.button=verificar usuario
+profile.verification.badge.community=Verificado por la comunidad
+profile.verification.badge.admin=Verificado por nosotros
 profile.js.delete-image.confirm=¿Borrar la imagen seleccionada?
 profile-onboarding.profile-picture=Tengo este aspecto
 profile-onboarding.description=Algo sobre mí
