--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -176,6 +176,19 @@ profile.misc-info.relationship.open=Relation ouverte
 profile.misc-info.relationship.other=C'est compliqué
 profile.misc-info.kids.no=Pas d'enfants
 profile.misc-info.kids.yes=A des enfants
+profile.profile-picture.change.description-1=Modifier la photo de profil?
+profile.profile-picture.change.description-2=Votre statut de vérification sera supprimé.
+profile.verification.your-verification=Votre image de vérification
+profile.verification.description-1=Téléchargez une photo de vous montrant les personnages suivants :
+profile.verification.description-2=Écrivez simplement le texte sur une feuille de papier blanc. Assurez-vous que votre visage est clairement visible.
+profile.verification.description-3=Vous pouvez être vérifié par nous ainsi que par la communauté.
+profile.verification.instruction-1=Les deux images montrent-elles la même personne ?
+profile.verification.instruction-2=Le texte de vérification est-il sur une feuille de papier vierge ?
+profile.verification.instruction-3=Les textes de confirmation correspondent-ils ?
+profile.verification.vote.success=Votre vote a été exprimé
+profile.verification.button=vérifier l'utilisateur
+profile.verification.badge.community=Vérifié par la communauté
+profile.verification.badge.admin=Vérifié par nous
 profile.js.delete-image.confirm=Supprimer l'image sélectionnée ?
 profile-onboarding.profile-picture=Je ressemble à ça
 profile-onboarding.description=Quelque chose à mon sujet
