--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -176,6 +176,19 @@ profile.misc-info.relationship.open=Rapporto aperto
 profile.misc-info.relationship.other=È complicato
 profile.misc-info.kids.no=Nessun figlio
 profile.misc-info.kids.yes=Ha figli
+profile.profile-picture.change.description-1=Cambia immagine del profilo?
+profile.profile-picture.change.description-2=Il tuo stato di verifica verrà rimosso.
+profile.verification.your-verification=La tua immagine di verifica
+profile.verification.description-1=Carica una tua foto che mostri i seguenti personaggi:
+profile.verification.description-2=Basta scrivere il testo su un pezzo di carta bianca. Assicurati che il tuo viso sia chiaramente visibile.
+profile.verification.description-3=Puoi essere verificato da noi e dalla community.
+profile.verification.instruction-1=Entrambe le immagini mostrano la stessa persona?
+profile.verification.instruction-2=Il testo di verifica è su un foglio di carta bianco?
+profile.verification.instruction-3=I messaggi di conferma corrispondono?
+profile.verification.vote.success=Il tuo voto è stato espresso
+profile.verification.button=verifica utente
+profile.verification.badge.community=Verificato dalla comunità
+profile.verification.badge.admin=Verificato da noi
 profile.js.delete-image.confirm=Cancellare l'immagine selezionata?
 profile-onboarding.profile-picture=Ho questo aspetto
 profile-onboarding.description=Qualcosa su di me
