--- a/src/main/resources/i18n/messages_ja.properties
+++ b/src/main/resources/i18n/messages_ja.properties
@@ -210,6 +210,19 @@ profile.misc-info.relationship.open=オープンな関係
 profile.misc-info.relationship.other=ややこしい
 profile.misc-info.kids.no=子供はいません。
 profile.misc-info.kids.yes=子供がいる
+profile.profile-picture.change.description-1=プロフィール画像を変更？
+profile.profile-picture.change.description-2=認証ステータスは削除されます。
+profile.verification.your-verification=あなたの認証写真
+profile.verification.description-1=次のキャラクターが写っている自分の写真をアップロードしてください:
+profile.verification.description-2=白い紙に文字を書くだけです。顔がはっきりと見えるようにしてください。
+profile.verification.description-3=あなたは私たちだけでなくコミュニティによっても認証されます。
+profile.verification.instruction-1=両方の写真には同じ人物が写っていますか?
+profile.verification.instruction-2=検証テキストは白紙ですか?
+profile.verification.instruction-3=確認テキストは一致していますか?
+profile.verification.vote.success=あなたの投票が行われました
+profile.verification.button=ユーザーを確認する
+profile.verification.badge.community=コミュニティによって検証されました
+profile.verification.badge.admin=弊社による検証済み
 
 profile.js.delete-image.confirm=選択した画像を削除しますか？
 
