--- a/src/main/resources/i18n/messages_ko.properties
+++ b/src/main/resources/i18n/messages_ko.properties
@@ -176,6 +176,19 @@ profile.misc-info.relationship.open=열린 관계
 profile.misc-info.relationship.other=복잡
 profile.misc-info.kids.no=자녀 없음
 profile.misc-info.kids.yes=자녀 있음
+profile.profile-picture.change.description-1=프로필 사진을 바꾸다?
+profile.profile-picture.change.description-2=확인 상태가 제거됩니다.
+profile.verification.your-verification=인증 사진
+profile.verification.description-1=다음 문자를 보여주는 자신의 사진을 업로드하십시오.
+profile.verification.description-2=그냥 흰 종이에 글을 쓰세요. 얼굴이 선명하게 보이는지 확인하십시오.
+profile.verification.description-3=우리는 물론 커뮤니티에서도 확인할 수 있습니다.
+profile.verification.instruction-1=두 사진이 같은 사람을 보여줍니까?
+profile.verification.instruction-2=확인 텍스트가 빈 종이에 있습니까?
+profile.verification.instruction-3=확인 문자가 일치합니까?
+profile.verification.vote.success=투표가 완료되었습니다.
+profile.verification.button=사용자 확인
+profile.verification.badge.community=커뮤니티에서 확인
+profile.verification.badge.admin=우리에 의해 확인
 profile.js.delete-image.confirm=선택한 사진을 삭제 하겠습니까?
 profile-onboarding.profile-picture=이렇게 생겼어요
 profile-onboarding.description=나 자신에 대한 것
