--- a/src/main/resources/i18n/messages_nb.properties
+++ b/src/main/resources/i18n/messages_nb.properties
@@ -80,6 +80,19 @@ profile.misc-info.drugs.other=Andre rusmidler
 profile.misc-info.relationship.other=Det er komplisert
 profile.misc-info.kids.no=Ingen barn
 profile.misc-info.kids.yes=Har barn
+profile.profile-picture.change.description-1=Endre profilbildet ditt?
+profile.profile-picture.change.description-2=Bekreftelsesstatusen din blir fjernet.
+profile.verification.your-verification=Bekreftelsesbildet ditt
+profile.verification.description-1=Last opp et bilde av deg selv med følgende tegn:
+profile.verification.description-2=Bare skriv teksten på et hvitt ark. Sørg for at ansiktet ditt er tydelig gjenkjennelig.
+profile.verification.description-3=Du kan bli verifisert av oss så vel som av samfunnet.
+profile.verification.instruction-1=Viser begge bildene samme person?
+profile.verification.instruction-2=Er bekreftelsesteksten på et blankt ark?
+profile.verification.instruction-3=Stemmer bekreftelsestekstene?
+profile.verification.vote.success=Din stemme er avgitt
+profile.verification.button=Bekreft brukere
+profile.verification.badge.community=Verifisert av fellesskapet
+profile.verification.badge.admin=Verifisert av oss
 profile.js.delete-image.confirm=Slett valgt bilde?
 profile-onboarding.description.placeholder=Jeg elsker iskrem!
 register.subtitle=Opprett ny konto
