--- a/src/main/resources/i18n/messages_nl.properties
+++ b/src/main/resources/i18n/messages_nl.properties
@@ -229,6 +229,19 @@ profile.referrer.info=Beveel Alovoa aan een vriend aan! Jullie krijgen allebei e
 profile.ui-design.rounded=Afgerond
 profile.misc-info.relationship.taken=In een relatie
 profile.misc-info.kids.yes=Heeft kinderen
+profile.profile-picture.change.description-1=Je profielfoto wijzigen?
+profile.profile-picture.change.description-2=Uw verificatiestatus wordt verwijderd.
+profile.verification.your-verification=Uw verificatieafbeelding
+profile.verification.description-1=Upload een foto van jezelf met de volgende tekens:
+profile.verification.description-2=Schrijf de tekst gewoon op een wit vel papier. Zorg ervoor dat je gezicht duidelijk herkenbaar is.
+profile.verification.description-3=U kunt zowel door ons als door de community worden geverifieerd.
+profile.verification.instruction-1=Tonen beide foto's dezelfde persoon?
+profile.verification.instruction-2=Staat de verificatietekst op een leeg vel papier?
+profile.verification.instruction-3=Komen de bevestigingsteksten overeen?
+profile.verification.vote.success=Uw stem is uitgebracht
+profile.verification.button=Gebruikers verifiëren
+profile.verification.badge.community=Geverifieerd door de community
+profile.verification.badge.admin=Geverifieerd door ons
 profile.misc-info.drugs.cannabis=Wiet
 profile.misc-info.relationship.other=Moeiljk uit te leggen
 profile-onboarding.description=Iets over mezelf
