--- a/src/main/resources/i18n/messages_pl.properties
+++ b/src/main/resources/i18n/messages_pl.properties
@@ -239,6 +239,19 @@ profile.misc-info.relationship.open=Otwarty związek
 profile.misc-info.relationship.single=Singiel
 profile.misc-info.kids.no=Bez dzieci
 profile.misc-info.kids.yes=Ma dzieci
+profile.profile-picture.change.description-1=Zmienić zdjęcie profilowe?
+profile.profile-picture.change.description-2=Twój status weryfikacji zostanie usunięty.
+profile.verification.your-verification=Twój obraz weryfikacyjny
+profile.verification.description-1=Prześlij swoje zdjęcie z następującymi znakami:
+profile.verification.description-2=Wystarczy napisać tekst na białej kartce papieru. Upewnij się, że Twoja twarz jest wyraźnie rozpoznawalna.
+profile.verification.description-3=Możesz zostać zweryfikowany zarówno przez nas, jak i przez społeczność.
+profile.verification.instruction-1=Czy oba zdjęcia przedstawiają tę samą osobę?
+profile.verification.instruction-2=Czy tekst weryfikacyjny znajduje się na czystej kartce papieru?
+profile.verification.instruction-3=Czy teksty potwierdzenia są zgodne?
+profile.verification.vote.success=Twój głos został oddany
+profile.verification.button=Weryfikowanie użytkowników
+profile.verification.badge.community=Zweryfikowane przez społeczność
+profile.verification.badge.admin=Zweryfikowane przez nas
 profile.js.delete-image.confirm=Usunąć wybrany obraz?
 profile-onboarding.description.placeholder=Naprawdę lubię lody!
 profile-onboarding.submit=Chodźmy!
