--- a/src/main/resources/i18n/messages_pt.properties
+++ b/src/main/resources/i18n/messages_pt.properties
@@ -210,6 +210,19 @@ profile.misc-info.relationship.open=Relação aberta
 profile.misc-info.relationship.other=É complicado
 profile.misc-info.kids.no=Sem crianças
 profile.misc-info.kids.yes=Tem Filhos
+profile.profile-picture.change.description-1=Mudar a sua foto de perfil?
+profile.profile-picture.change.description-2=Seu status de verificação será removido.
+profile.verification.your-verification=A sua imagem de verificação
+profile.verification.description-1=Carregue uma foto sua com os seguintes caracteres:
+profile.verification.description-2=Basta escrever o texto numa folha de papel branca. Certifique-se de que o seu rosto é claramente reconhecível.
+profile.verification.description-3=Você pode ser verificado por nós, bem como pela comunidade.
+profile.verification.instruction-1=Ambas as imagens mostram a mesma pessoa?
+profile.verification.instruction-2=O texto de verificação está numa folha de papel em branco?
+profile.verification.instruction-3=Os textos de confirmação correspondem?
+profile.verification.vote.success=O seu voto foi expresso
+profile.verification.button=Verificar usuários
+profile.verification.badge.community=Verificado pela comunidade
+profile.verification.badge.admin=Verificado por nós
 
 profile.js.delete-image.confirm=Apagar imagem seleccionada?
 
