--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -177,6 +177,19 @@ profile.misc-info.relationship.open=Открытые отношения
 profile.misc-info.relationship.other=Сложные отношения
 profile.misc-info.children.no=Нет детей
 profile.misc-info.kids.yes=Есть дети
+profile.profile-picture.change.description-1=Изменить фотографию профиля?
+profile.profile-picture.change.description-2=Ваш статус проверки будет удален.
+profile.verification.your-verification=Ваше проверочное изображение
+profile.verification.description-1=Загрузите свою фотографию со следующими персонажами:
+profile.verification.description-2=Просто напишите текст на белом листе бумаги. Убедитесь, что ваше лицо четко узнаваемо.
+profile.verification.description-3=Вы можете быть проверены нами, а также сообществом.
+profile.verification.instruction-1=На обеих фотографиях изображен один и тот же человек?
+profile.verification.instruction-2=Является ли проверочный текст на чистом листе бумаги?
+profile.verification.instruction-3=Совпадают ли тексты подтверждения?
+profile.verification.vote.success=Ваш голос отдан
+profile.verification.button=Проверка пользователей
+profile.verification.badge.community=Проверено сообществом
+profile.verification.badge.admin=Проверено нами
 profile.js.delete-image.confirm=Удалить выбранное изображение?
 profile-onboarding.profile-picture=Я выгляжу вот так
 profile-onboarding.description=Кое-что о себе
