--- a/src/main/resources/i18n/messages_sv.properties
+++ b/src/main/resources/i18n/messages_sv.properties
@@ -105,6 +105,19 @@ profile.misc-info.drugs.alcohol=Alkohol
 profile.misc-info.relationship.other=Det är komplicerat
 profile.misc-info.kids.no=Inga barn
 profile.misc-info.kids.yes=Har barn
+profile.profile-picture.change.description-1=Ändra din profilbild?
+profile.profile-picture.change.description-2=Din verifieringsstatus tas bort.
+profile.verification.your-verification=Din verifieringsbild
+profile.verification.description-1=Ladda upp en bild av dig själv med följande tecken:
+profile.verification.description-2=Skriv bara texten på ett vitt pappersark. Se till att ditt ansikte är tydligt igenkännligt.
+profile.verification.description-3=Du kan verifieras av oss såväl som av samhället.
+profile.verification.instruction-1=Visar båda bilderna samma person?
+profile.verification.instruction-2=Finns verifieringstexten på ett tomt pappersark?
+profile.verification.instruction-3=Stämmer konfirmationstexterna?
+profile.verification.vote.success=Din röst har avgetts
+profile.verification.button=Verifiera användare
+profile.verification.badge.community=Verifierad av communityn
+profile.verification.badge.admin=Verifierad av oss
 profile.js.delete-image.confirm=Ta bort den valda bilden?
 profile-onboarding.profile-picture=Jag ser ut så här
 profile-onboarding.description=Någonting om mig själv
