--- a/src/main/resources/i18n/messages_tr.properties
+++ b/src/main/resources/i18n/messages_tr.properties
@@ -146,6 +146,19 @@ profile.misc-info.relationship.open=Açık ilişki
 profile.misc-info.relationship.other=Karmaşık
 profile.misc-info.kids.no=Çocuk Yok
 profile.misc-info.kids.yes=Çocukları Var
+profile.profile-picture.change.description-1=Profil resminizi mi değiştiriyorsunuz?
+profile.profile-picture.change.description-2=Doğrulama durumunuz kaldırılır.
+profile.verification.your-verification=Doğrulama resminiz
+profile.verification.description-1=Aşağıdaki karakterleri içeren bir resminizi yükleyin:
+profile.verification.description-2=Sadece metni beyaz bir kağıda yazın. Yüzünüzün açıkça tanınabilir olduğundan emin olun.
+profile.verification.description-3=Hem bizim tarafımızdan hem de topluluk tarafından doğrulanabilirsiniz.
+profile.verification.instruction-1=Her iki resim de aynı kişiyi mi gösteriyor?
+profile.verification.instruction-2=Doğrulama metni boş bir kağıda mı yazılmış?
+profile.verification.instruction-3=Onay metinleri eşleşiyor mu?
+profile.verification.vote.success=Oyunuz kullanıldı
+profile.verification.button=Kullanıcıları doğrulama
+profile.verification.badge.community=Topluluk tarafından doğrulandı
+profile.verification.badge.admin=Bizim tarafımızdan doğrulandı
 profile.misc-info.drugs.alcohol=Alkol
 profile.misc-info.drugs.tobacco=Tütün
 profile.misc-info.drugs.cannabis=Esrar
