--- a/src/main/resources/i18n/messages_zh.properties
+++ b/src/main/resources/i18n/messages_zh.properties
@@ -210,6 +210,19 @@ profile.misc-info.relationship.open=开放式关系
 profile.misc-info.relationship.other=关系很复杂
 profile.misc-info.kids.no=没有孩子
 profile.misc-info.kids.yes=有孩子
+profile.profile-picture.change.description-1=更改您的个人资料图片？
+profile.profile-picture.change.description-2=您的验证状态将被删除。
+profile.verification.your-verification=您的验证图像
+profile.verification.description-1=上传一张包含以下字符的您自己的照片：
+profile.verification.description-2=只需将文本写在一张白纸上即可。确保您的脸部清晰可辨。
+profile.verification.description-3=您可以由我们和社区验证。
+profile.verification.instruction-1=两张照片显示的是同一个人吗？
+profile.verification.instruction-2=验证文本是否在一张白纸上？
+profile.verification.instruction-3=确认文本是否匹配？
+profile.verification.vote.success=您的投票已投出
+profile.verification.button=验证用户
+profile.verification.badge.community=由社区验证
+profile.verification.badge.admin=由我们验证
 
 profile.js.delete-image.confirm=删除所选图像？
 
