--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -126,6 +126,7 @@ login.subtitle=Please login to proceed.
 login.forgot-password=Forgot password?
 login.oauth.google=Sign in with Google
 login.oauth.facebook=Sign in with Facebook
+login.oauth.ip6li=Sign in with ip6.li
 login.email.sign-in=Sign in with email
 login.register=Don't have an account?
 login.remember=Remember me
