Improved logout handler

--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -212,6 +212,7 @@ register.asterisk-warning=Felder mit einem Stern (*) können zukünftig nicht me
 register.login=Du hast bereits ein Konto?
 register.oauth.google=Registrieren mit Google
 register.oauth.facebook=Registrieren mit Facebook
+register.oauth.ip6li=Registrieren mit ip6.li
 register.referral-code=Empfehlungscode
 search.title=Suchen
 search.max-distance=Maximale Entfernung
