Fixed translation typo

--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -139,7 +139,7 @@ password-change.warning=Das Passwort muss mindestens 7 Zeichen lang sein und Zei
 password-reset.title=Passwort zurücksetzen
 profile.title=Profil
 profile.webpush=Benachrichtigungen erhalten
-profile.intention=I möchte...
+profile.intention=Ich möchte...
 profile.intention.meet=neue Leute kennenlernen
 profile.intention.date=eine romantische Beziehung
 profile.intention.sex=sexuelle Intimität
