--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -134,6 +134,7 @@ login.js.error=Login failed, please check your credentials, complete the captcha
 message.title=Messages
 message.match=You got a match! Tap here to send a message :)
 message.video-chat=A video chat has been requested!
+message.no-message= no new Messages!
 message.js.error.max-length=You have reached the maximum number of characters.
 message.js.video.confirm=Invite chat partner to video chat?
 notification.title=Notification
