Fix Login and Admin pages

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -21,9 +21,12 @@ language=Language
 message=Message
 kofi=Ko-fi
 login=Login
+password=Passwort
+reports=Reports
 privacy-policy=Privacy Policy
 sign-up=Sign up
 source-code=Source code
+subject=Subject
 submit=Submit
 tos=Terms of Service
 website=Website
@@ -51,7 +54,7 @@ index.cookie.more=Click here to learn more
 
 #do not translate
 index.subtitle=Meet new, exciting people!
-index.subtitle-2=100% free, no ads 
+index.subtitle-2=100% free, no ads
 index.notice=All photos are of models and used for illustrative purposes only
 index.key-features=Key features
 index.free.title=Forever free
@@ -96,6 +99,10 @@ privacy.title=Privacy
 
 tos.title=Terms of service
 
+login.title=Login
+login.subtitle=Please log in to proceed.
+login.remember=Remember me
+
 admin.title=Administration
 admin-delete-contact=Delete contact
 admin.delete-report=Delete report
@@ -105,7 +112,9 @@ admin.remove-description=Remove description
 admin.remove-images=Remove images
 admin.mail.send-single=Send email
 admin.mail.send-all=Send email to all
-admin.mail.send-all.confirm=You are about to send an email to all users. Are you sure?
+admin.mail.send-all.confirm=You are about to email all users. Are you sure?
+admin.account.delete=Delete account
+
 
 ###
 ### BACKEND ###
