--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -19,6 +19,7 @@ faq=FAQ
 imprint=Imprint
 language=Language
 message=Message
+new-password=New password
 kofi=Ko-fi
 login=Login
 password=Passwort
@@ -102,6 +103,10 @@ tos.title=Terms of service
 login.title=Login
 login.subtitle=Please log in to proceed.
 login.remember=Remember me
+
+password-change.title=Change password
+password-change.warning=Your password needs to be at least 7 characters long and must contain characters and numbers.
+
 
 admin.title=Administration
 admin-delete-contact=Delete contact
