Test cases added for user email preferences

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -149,11 +149,11 @@ backend.mail.account-delete-confirm.body=Hello {0}, <br> We have deleted your ac
 backend.mail.account-confirmed.subject=Account confirmed
 backend.mail.account-confirmed.body=Hello {0}, <br> We have confirmed your account creation at {1}. Have fun meeting new people!
 backend.mail.like-notif-email.subject=Somebody likes you!
-backend.mail.like-notif-email.body=Hello {0},<br> Somebody just like your profile! Visit alovoa.com to find out who.
+backend.mail.like-notif-email.body=Hello {0},<br> Somebody just like your profile! Visit alovoa.com to find out more.
 backend.mail.match-notif-email.subject=You matched with somebody!
 backend.mail.match-notif-email.body=Hello {0},<br> Somebody just matched with you! Visit alovoa.com to find out who.
 backend.mail.chat-notif-email.subject=You have a new message!
-backend.mail.chat-notif-email.body=Hello {0},<br> You have a new message! Visit alovoa.com to read your messages.
+backend.mail.chat-notif-email.body=Hello {0},<br> You have a new message from {1}. <br> {1} says: "{2}".<br> Visit alovoa.com to read your messages.
 
 
 # Text blocks
