feat: Email notifications for new likes, matches and messages

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -149,11 +149,11 @@ backend.mail.account-delete-confirm.body=Hello {0}, <br> We have deleted your ac
 backend.mail.account-confirmed.subject=Account confirmed
 backend.mail.account-confirmed.body=Hello {0}, <br> We have confirmed your account creation at {1}. Have fun meeting new people!
 backend.mail.like.subject=Somebody likes you!
-backend.mail.like.body=Hi {0},<br>Someone likes you!
+backend.mail.like.body=<p style="font-size: 24px">Hi {0},</p><br><br><p>Someone likes you! Like them back to start a conversation.</p><br><br><br><a href="HREF_APP_FRONTEND" style="background-color: #EC407A; border-radius: 24px; color: white; padding: 14px; text-decoration: none;">Open Alovoa</a><br><br><br><p style="font-size: 12px">You can turn off email notifications in your profile settings</p>
 backend.mail.match.subject=You matched with somebody!
-backend.mail.match.body=Hi {0},<br>You got a new match!
+backend.mail.match.body=<p style="font-size: 24px">Hi {0},</p><br><br><p>You got a new match! Start a new conversion now.</p><br><br><br><a href="HREF_APP_FRONTEND" style="background-color: #EC407A; border-radius: 24px; color: white; padding: 14px; text-decoration: none;">Open Alovoa</a><br><br><br><p style="font-size: 12px">You can turn off email notifications in your profile settings</p>
 backend.mail.chat.subject=You have a new message!
-backend.mail.chat.body=Hi {0},<br>{1} just sent you a message!
+backend.mail.chat.body=<p style="font-size: 24px">Hi {0},</p><br><br><p>{1} just sent you a message! Time to send them a message back.</p><br><br><br><a href="HREF_APP_FRONTEND" style="background-color: #EC407A; border-radius: 24px; color: white; padding: 14px; text-decoration: none;">Open Alovoa</a><br><br><br><p style="font-size: 12px">You can turn off email notifications in your profile settings</p>
 
 
 # Text blocks
